# qoco-python

./: .gitignore  CMakeLists.txt  Dockerfile.cuda-manylinux  LICENSE  Makefile  README.md  RELEASE.md  bindings.cpp  build_cuda_wheels.sh  example.c  gen.py  gen_test.py  lcvx_test.py  my_library.cpp  pyproject.toml  requirements.txt  setup.py  test.py  test.sh
.github/workflows/: build.yml  build_cuda.yml  built_cuda.yml  unit_tests.yml
backend/cuda/: cibuildwheel.toml  pyproject.toml
backends/cuda/: pyproject.toml
src/: CMakeLists.txt  bindings.cpp  bindings.cpp.in
src/qcos/: __init__.py  interface.py
src/qcospy/: __init__.py  codegen.py  codegen_utils.py  interface.py
src/qoco/: __init__.py  _version.py  codegen.py  codegen_utils.py  interface.py
tests/: linear_objective_test.py  pdg_test.py  simple_socp_test.py  simple_test.py  test_lcvx.py  test_lcvx_bad_scale.py  test_linear_objective.py  test_no_constraints.py  test_no_eq_constraints.py  test_no_ineq_constraints.py  test_no_soc_constraints.py  test_pdg.py  test_robust_kalman_filter.py  test_simple_socp.py  test_simple_socp1.py  test_simple_socp2.py  test_simple_socp3.py  test_update_data.py
tests/utils/: cvxpy_to_qoco.py  run_generated_solver.py
