[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "qoco"
dynamic = ["version"]
description = "QOCO: Quadratic Objective Conic Optimizer"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Govind M. Chari", email = "govindchari1@gmail.com" }]
dependencies = ["numpy>=1.7", "qdldl", "scipy>=0.13.2", "setuptools"]

[tool.scikit-build]
install.components = ["python"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
minimum-version = "0.8"
wheel.install-dir = "qoco"
sdist.include = ["src/qoco/_version.py"]

[project.urls]
Homepage = "https://github.com/qoco-org/qoco"
Issues = "https://github.com/qoco-org/qoco/issues"

[tool.setuptools_scm]
write_to = "src/qoco/_version.py"
