[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "qoco-cuda"
version = "0.1.0"
description = "QOCO: Quadratic Objective Conic Optimizer"
requires-python = ">=3.8"
authors = [{ name = "Govind M. Chari", email = "govindchari1@gmail.com" }]
dependencies = ["numpy>=1.7", "scipy>=0.13.2", "setuptools", "qoco>=0.2.0"]

[tool.scikit-build]
install.components = ["python"]

[tool.scikit-build.cmake.define]
QOCO_ALGEBRA_BACKEND = "cuda"
QOCO_EXT_MODULE_NAME = "qoco_cuda"

[project.urls]
Homepage = "https://github.com/qoco-org/qoco"
Issues = "https://github.com/qoco-org/qoco/issues"